# mqtt-relay

./: .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  Dockerfile  README.md  config.toml  docker.json  dockerhub.sh
.cargo/: config.toml
.github/: build-win.ps1  macos-build-entitlements.plist
.github/workflows/: build-alpine-arm64.yml  build-alpine-x64.yml  build-dockerhub-alt.yml  build-dockerhub.yml  build-linux-arm64.yml  build-linux-x64.yml  build-macos-arm64.yml  build-macos-x64.yml  build-release.yml  build-win-cross-x64.yml  build-win-x64.yml  tests.yml
examples/: README.md
examples/basic-docker-compose/: .tagoio-mqtt-relay.toml  docker-compose.yml
examples/docker-compose/: docker-compose.yml
examples/mosquitto-relay-setup/: .tagoio-mqtt-relay.toml  docker-compose.yml
examples/mosquitto-relay-setup/mosquitto/config/: mosquitto.conf
examples/mosquitto-relay-tagoio-auth-setup/: docker-compose.yml
examples/mosquitto-relay-tagoio-auth-setup/mosquitto/config/: mosquitto.conf
src/: default_config.toml  main.rs  relay.rs  utils.rs
src/schema/: mod.rs
src/services/: bridge.rs  mod.rs  mosquitto_auth.rs  mqttrelay.rs  tagoio.rs
