[package]
name = "tagoio-relay"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
mockito = "1.4.0"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"] }
rumqttc = { version = "0.24.0" }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = {version = "1.37.0", features = ["full", "rt-multi-thread"]}
toml-env = "1.2.0"
