[package]
name = "tagoio-relay"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
mockito = "1.4.0"

[dependencies]
anyhow = "1.0.86"
axum = "0.8"
axum-server = { version = "0.8.0", features = ["tls-rustls", "tls-openssl"] }
clap = { version = "4.5.4", features = ["derive"] }
config = "0.15"
dotenvy_macro = "0.15.7"
env_logger = "0.11.3"
home = "0.5.9"
log = "0.4.21"
once_cell = "1.19.0"
openssl = { version = "0.10.64", features = ["vendored"] }
rand = "0.9"
reqwest = { version = "0.13", features = [ "json"] }
rumqttc = { version = "0.25" }
rustls-native-certs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.37.0", features = ["full", "rt-multi-thread"]}
tokio-rustls = "0.26.0"
figment = { version = "0.10", features = ["toml", "env"] }
hex = "0.4.3"
